# little-world

./: .gitignore  CMakeLists.txt  package-lock.json  package.json
source/: CMakeLists.txt  little_world.c  manager.c  manager.h  meson.build
tasks/: build  build.js  module  module.js  quick  quick.js  run  run.js  setup  setup.js
